OC2 = OpenCart 2 (OC21, OC22, OC23 = specifieke minor versie binnen major versie 2)
OC3 = OpenCart 3
PS  = PrestaShop
VM3 = VirtueMart3 (Joomla)
WC  = WooCommerce (WordPress) (alle ondersteunde versies, vanaf 5.5.2 is dat alleen nog WC3)
WC2 = WooCommerce 2 (WordPress)
WC3 = WooCommerce 3+ (WordPress)

6.0.0-alpha2
------------
NOTE: The minimum PHP version requirement is now set to 5.6.

Bugs:
- ALL(?): Warning 901 on send new.
- MA2: Minor bug: when invoice gets sent directly on create, child items may
  appear as main items in getVisibleItems().

6.0.0-alpha1 (2020-06-04) (never released)
------------------------------------------
NOTE: The minimum PHP version requirement is now set to 5.6.

Features:
- Added a registration form that uses the API sign_up to apply for an Acumulus
  test account.
- Added a link to the registration form on the settings page, if login
  credentials are not yet set or are incorrect.
- Complete make-over of the information block on the settings forms. This block
  is now also shown on the batch form and the registration success screen.
- Added sign_up, MyAcumulus and picklist Company types API calls.


5.10.0-alpha1 (2020-05-11) (never released)
-------------------------------------------
Bugs:
- WC: Support for TM Extra Product Options did not add the meta tag
  meta-line-type.

Features:
- Added a registration form that uses the API sign_up to apply for an Acumulus
  test account.
- Added sign_up and picklist Company types API calls.
- WC: If form error messages are for a specific field that field will be given
  a red border.
- WC: If form error messages are for a specific field they are now clickable,
  upon which the focus will be set to the erroneous form field.
- Upgrade function to 5.10.0 checks strengthened Requirements.

Refactorings:
- Pushed method getLogoUrl to the base Form class
- Allow labels to contain html.

- Added some unit tests for basic classes in the Web namespace. As a consequence